fix: fixes logo overflow

--- a/src/index.css
+++ b/src/index.css
@@ -186,8 +186,8 @@ body {
 
 .landing-image {
   flex: auto;
-  height: 85vh;
-  width: 100vw;
+  height: 80vh;
+  width: 80vw;
 }
 
 .self-promotion-link {
